<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Stock TextView -->
        <TextView
            android:id="@+id/tvStock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stock_placeholder"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="serif"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ltpContainer"
            app:layout_constraintHorizontal_chainStyle="packed" />

        <!-- LTP Container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ltpContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tvStock">

            <TextView
                android:id="@+id/tvLtpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ltp_label"
                android:textSize="11sp"
                android:textColor="@color/gray_medium"
                android:textStyle="normal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tvLtpValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/currency_zero"
                android:textColor="@color/gray_dark"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvLtpLabel"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- NET QTY Container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/netQtyContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvStock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/pnlContainer">

            <TextView
                android:id="@+id/tvNetQtyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/net_qty_label"
                android:textSize="11sp"
                android:textColor="@color/gray_medium"
                android:textStyle="normal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tvNetQtyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/quantity_zero"
                android:textColor="@color/gray_dark"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvNetQtyLabel"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- P&L Container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pnlContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/ltpContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/netQtyContainer">

            <TextView
                android:id="@+id/tvPnLLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pnl_label"
                android:textSize="11sp"
                android:textColor="@color/gray_medium"
                android:textStyle="normal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tvPnLValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/currency_zero"
                android:textColor="@color/gray_dark"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvPnLLabel"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Separator View -->
    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/gray_light"
        app:layout_constraintTop_toBottomOf="@id/contentContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>